--- a/1hw/index.html
+++ b/1hw/index.html
@@ -44,7 +44,7 @@
 
             <button class="primary-orange">Log in</button>
         </div>
-        <img class="hero-image" src="./assets/hero-image.png" alt="house image" />
+        <img class="hero-image" src="./assets/hero-image-1.png" alt="house image" />
     </section>
     <section id="about-section" class="about-section grid">
         <div class="about-text">
@@ -63,7 +63,7 @@
                 <p class="about-card-header">Personalized Service</p>
                 <p class="about-card-content">
                     We understand that each client has unique needs and preferences,
-                    which is whe we provide personalized service that is tailored to
+                    which is why we provide personalized service that is tailored to
                     meet individual requirements.
                 </p>
             </article>
@@ -172,7 +172,7 @@
     </section>
     <section id="footer-section" class="footer-section grid">
         <div class="footer-left">
-            <h3 class="bold">Turn your dreams of owning a home into a reality.</h3>
+            <h3 class="bold dark">Turn your dreams of owning a home into a reality.</h3>
             <p>
                 Contact us today to learn more about out services and how we can 
                 assist you in all your real estate needs.
